--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -93,6 +93,9 @@ dependencies:
   geocoding: ^2.2.0
   http: ^1.2.0
   geocode: ^1.0.3
+  firebase_database: ^10.4.9
+  flutter_geofire: ^2.0.3
+  firebase_messaging: ^14.7.19
 
 dev_dependencies:
   flutter_test:
@@ -117,7 +120,7 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-assets:
+  assets:
     - assets/logos/
     - assets/images/other/
     - assets/animations/
@@ -134,17 +137,25 @@ assets:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
+  fonts:
+    - family: Nunito
+      fonts:
+        - asset: assets/fonts/nunito/Nunito-Regular.ttf
+          weight: 400
+        - asset: assets/fonts/nunito/Nunito-Medium.ttf
+          weight: 500
+        - asset: assets/fonts/nunito/Nunito-SemiBold.ttf
+          weight: 600
+        - asset: assets/fonts/nunito/Nunito-Italic.ttf
+          weight: 400
+        - asset: assets/fonts/nunito/Nunito-MediumItalic.ttf
+          weight: 500
+        - asset: assets/fonts/nunito/Nunito-SemiBoldItalic.ttf
+          weight: 600
+        - asset: assets/fonts/nunito/Nunito-Bold.ttf
+          weight: 700
+        - asset: assets/fonts/nunito/Nunito-BoldItalic.ttf
+          weight: 700     
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
