--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,12 +1,16 @@
 buildscript {
     ext.kotlin_version = '1.9.23'
     repositories {
+        gradlePluginPortal()
         google()
         mavenCentral()
     }
 
     dependencies {
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath 'com.android.tools.build:gradle:7.3.0'
+        classpath 'com.google.gms:google-services:4.4.1'
+        classpath "com.google.android.libraries.mapsplatform.secrets-gradle-plugin:secrets-gradle-plugin:2.0.1"
     }
 }
 
