--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -96,6 +96,19 @@ dependencies:
   firebase_database: ^10.4.9
   flutter_geofire: ^2.0.3
   firebase_messaging: ^14.7.19
+  stacked_notification_cards: ^0.1.0-dev.5
+  flutter_zoom_drawer: ^3.2.0
+  another_stepper: ^1.2.2
+  card_swiper: ^3.0.1
+  swipable_stack: ^2.0.0
+  flutter_cool_card_swiper: ^0.0.4
+  firebase_app_check: ^0.2.1+17
+  flutter_swipe_button: ^2.1.1+1
+  url_launcher: ^6.2.5
+  location: ^5.0.3
+  uuid: ^4.3.3
+  flutter_chat_ui: ^1.6.12
+  flutter_chat_types: ^3.6.2
 
 dev_dependencies:
   flutter_test:
